--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
    "description": "Login-Backend",
    "main": "index.js",
    "scripts": {
-      "start": "tsc && node ./dist/server.js",
-      "dev": "tsnd --transpile-only --ignore-watch node_modules ./src/server.ts",
+      "start": "tsc && node ./dist/index.js",
+      "dev": "tsnd --transpile-only --ignore-watch node_modules ./src/index.ts",
       "build": "clear && echo \"Transpiling files...\" && tsc && echo \"Done!\"",
       "test": "jest"
    },
@@ -17,6 +17,7 @@
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
+      "express-async-errors": "^3.1.1",
       "jsonwebtoken": "^8.5.1",
       "knex": "^0.21.5",
       "lodash": "^4.17.21",
@@ -25,7 +26,6 @@
       "uuid": "^8.3.0"
    },
    "devDependencies": {
-      "@types/nodemailer": "^6.4.4",
       "@types/bcryptjs": "^2.4.2",
       "@types/cors": "^2.8.7",
       "@types/express": "^4.17.8",
@@ -33,6 +33,7 @@
       "@types/knex": "^0.16.1",
       "@types/lodash": "^4.14.182",
       "@types/node": "^14.11.2",
+      "@types/nodemailer": "^6.4.4",
       "@types/uuid": "^8.3.0",
       "ts-node-dev": "^1.0.0-pre.63",
       "typescript": "^4.0.3"
